@@ -1413,7 +1413,7 @@ assert(ix == 0);
 	if (pktlen == 0 || tag != PGPTAG_SIGNATURE) {
 	    val = xstrdup(_("(not an OpenPGP signature)"));
 	} else {
-	    pgpDig dig = pgpDigNew(0);
+	    pgpDig dig = pgpDigNew(RPMVSF_DEFAULT, 0);
 	    pgpDigParams sigp = pgpGetSignature(dig);
 	    size_t nb = 0;
 	    const char *tempstr;
